fix: swagger type
