# apps/common/model/dto/dto_easyjson.go
@@ -1,0 +1,23 @@
+// TEMPORARY AUTOGENERATED FILE: easyjson stub code to make the package
+// compilable during generation.
+
+package  dto
+
+import (
+  "github.com/mailru/easyjson/jwriter"
+  "github.com/mailru/easyjson/jlexer"
+)
+
+func ( CreateDictTypeDTO ) MarshalJSON() ([]byte, error) { return nil, nil }
+func (* CreateDictTypeDTO ) UnmarshalJSON([]byte) error { return nil }
+func ( CreateDictTypeDTO ) MarshalEasyJSON(w *jwriter.Writer) {}
+func (* CreateDictTypeDTO ) UnmarshalEasyJSON(l *jlexer.Lexer) {}
+
+type EasyJSON_exporter_CreateDictTypeDTO *CreateDictTypeDTO
+
+func ( DictTypeQuery ) MarshalJSON() ([]byte, error) { return nil, nil }
+func (* DictTypeQuery ) UnmarshalJSON([]byte) error { return nil }
+func ( DictTypeQuery ) MarshalEasyJSON(w *jwriter.Writer) {}
+func (* DictTypeQuery ) UnmarshalEasyJSON(l *jlexer.Lexer) {}
+
+type EasyJSON_exporter_DictTypeQuery *DictTypeQuery
